# resource-sida-omv-rlden

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
crates/omvarlden-crawler/: Cargo.toml
crates/omvarlden-crawler/src/: main.rs
crates/omvarlden-spider/: Cargo.toml
crates/omvarlden-spider/src/: error.rs  item.rs  lib.rs  omvarlden.rs
