[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
## local crates
omvarlden-spider = { path = "./crates/omvarlden-spider" }

## external crates
anyhow = "1.0.88"
async-trait = { version = "0.1.68" }
clap = { version = "4.5.17", features = ["cargo", "derive"] }
flate2 = "1.0.33"
reqwest = { version = "0.12.7", features = ["gzip"] }
scraper = "0.20.0"
serde_json = "1.0.128"
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
webcrawler = { git = "https://github.com/spraakbanken/webcrawler-rs.git" }
