[package]
name = "omvarlden-crawler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omvarlden-crawler"
doc = false
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webcrawler = { workspace = true }

# local deps
omvarlden-spider = { workspace = true }
