[package]
name = "omvarlden-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.68" }
reqwest = { version = "0.12.7", features = ["gzip"] }
scraper = "0.20.0"
tokio = { version = "1.40.0", default-features = false, features = ["fs"] }
tracing = { workspace = true }
webcrawler = { workspace = true }
