[package]
name = "omvarlden-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true, features = ["gzip"] }
scraper = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
webcrawler = { workspace = true }
